[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/input_background.png" type="Texture" id=1]
[ext_resource path="res://assets/input_background_shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/title_images/friends.png" type="Texture" id=3]
[ext_resource path="res://fonts/Poppins/Poppins-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/player_background.png" type="Texture" id=5]
[ext_resource path="res://scripts/game.gd" type="Script" id=6]
[ext_resource path="res://scenes/position_point.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/player_background_shadow.png" type="Texture" id=8]
[ext_resource path="res://assets/check_button.png" type="Texture" id=9]
[ext_resource path="res://assets/back_button.png" type="Texture" id=10]
[ext_resource path="res://scenes/name.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/player_button.png" type="Texture" id=12]
[ext_resource path="res://assets/player/Album Art.png" type="Texture" id=13]
[ext_resource path="res://resources/sub_label.tres" type="DynamicFont" id=14]
[ext_resource path="res://resources/regular_label.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/player/buttons/shuffle_off.png" type="Texture" id=17]
[ext_resource path="res://assets/player/buttons/previous.png" type="Texture" id=18]
[ext_resource path="res://assets/player/buttons/shuffle_on.png" type="Texture" id=19]
[ext_resource path="res://assets/player/buttons/repeat_off.png" type="Texture" id=20]
[ext_resource path="res://assets/progress_bar/under.png" type="Texture" id=21]
[ext_resource path="res://assets/flames_button.png" type="Texture" id=22]
[ext_resource path="res://assets/progress_bar/progress.png" type="Texture" id=23]
[ext_resource path="res://assets/player/buttons/play.png" type="Texture" id=24]
[ext_resource path="res://assets/player/buttons/next.png" type="Texture" id=25]
[ext_resource path="res://assets/player/buttons/repeat_one.png" type="Texture" id=26]
[ext_resource path="res://resources/list_grabber.tres" type="StyleBox" id=27]
[ext_resource path="res://assets/player/buttons/pause.png" type="Texture" id=28]
[ext_resource path="res://assets/playing_track_bar.png" type="Texture" id=29]
[ext_resource path="res://assets/track_bar.png" type="Texture" id=30]
[ext_resource path="res://fonts/Poppins/Poppins-Regular.ttf" type="DynamicFontData" id=31]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 31 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.207843, 0.203922, 0.25098, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
corner_detail = 20
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="Theme" id=4]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 27 )
VScrollBar/styles/grabber_highlight = ExtResource( 27 )
VScrollBar/styles/grabber_pressed = ExtResource( 27 )
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Output/Elements/Title/Image:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Output/Elements/Title/Label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Output/Elements/Title/Image:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Output/Elements/Title/Label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Output/Elements/Bars/PositionPoints:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Output/Elements/Bars/TrackDetails:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Back:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 359, 2104 ), Vector2( 359, 1640 ) ]
}

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_right = 540.0
margin_bottom = 896.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="VBoxContainer" parent="Output"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = -366.0
margin_right = 514.0
margin_bottom = 366.0
custom_constants/separation = 260
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="HBoxContainer" parent="Output/Elements"]
margin_right = 1029.0
margin_bottom = 30.0
custom_constants/separation = 250

[node name="TrackDetails" type="HBoxContainer" parent="Output/Elements/Bars"]
margin_right = 369.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="PlayingIcon" type="TextureRect" parent="Output/Elements/Bars/TrackDetails"]
margin_right = 60.0
margin_bottom = 30.0
texture = ExtResource( 29 )

[node name="Background" type="TextureRect" parent="Output/Elements/Bars/TrackDetails"]
margin_left = 70.0
margin_right = 369.0
margin_bottom = 30.0
texture = ExtResource( 30 )

[node name="Label" type="Label" parent="Output/Elements/Bars/TrackDetails/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.858824, 0.909804, 1 )
text = "Vadium - PAIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionPoints" type="HBoxContainer" parent="Output/Elements/Bars"]
margin_left = 619.0
margin_right = 1029.0
margin_bottom = 30.0
size_flags_horizontal = 8
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point1" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
isActive = true

[node name="Point2" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
margin_left = 70.0
margin_right = 130.0

[node name="Point3" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
margin_left = 140.0
margin_right = 200.0

[node name="Point4" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
margin_left = 210.0
margin_right = 270.0

[node name="Point5" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
margin_left = 280.0
margin_right = 340.0

[node name="Point6" parent="Output/Elements/Bars/PositionPoints" instance=ExtResource( 7 )]
margin_left = 350.0
margin_right = 410.0

[node name="Title" type="VBoxContainer" parent="Output/Elements"]
margin_top = 290.0
margin_right = 1029.0
margin_bottom = 732.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="Output/Elements/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 364.0
margin_right = 664.0
margin_bottom = 300.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Output/Elements/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 330.0
margin_right = 1029.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 2 )
text = "Friends"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Output"]

[node name="Input" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -520.0
margin_top = -952.0
margin_right = 520.0
margin_bottom = 0.000610352
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputBackground" type="TextureRect" parent="Input"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -544.0
margin_top = -952.001
margin_right = 536.0
margin_bottom = 94.9994
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="Input/InputBackground"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -692.5
margin_top = -635.5
margin_right = 692.5
margin_bottom = 629.5
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="VBoxContainer" parent="Input"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -405.0
margin_top = -425.5
margin_right = 405.0
margin_bottom = 425.5
custom_constants/separation = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="TextureButton" parent="Input/Elements" groups=[
"Buttons",
]]
margin_left = 650.0
margin_right = 810.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 80, 80 )
size_flags_horizontal = 8
texture_normal = ExtResource( 12 )

[node name="NameInput" type="VBoxContainer" parent="Input/Elements"]
margin_top = 320.0
margin_right = 810.0
margin_bottom = 542.0
size_flags_horizontal = 5
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name1" parent="Input/Elements/NameInput" instance=ExtResource( 11 )]
margin_right = 810.0

[node name="Name2" parent="Input/Elements/NameInput" instance=ExtResource( 11 )]
margin_top = 151.0
margin_right = 810.0
margin_bottom = 222.0
placeholder_text = "Second Name"

[node name="Check" type="TextureButton" parent="Input/Elements" groups=[
"Buttons",
]]
margin_left = 447.0
margin_top = 702.0
margin_right = 810.0
margin_bottom = 851.0
size_flags_horizontal = 8
texture_normal = ExtResource( 9 )

[node name="Tween" type="Tween" parent="Input"]

[node name="Player" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -1752.0
margin_right = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Player"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="Player/Background"]
show_behind_parent = true
margin_left = -144.0
margin_top = -176.0
margin_right = 1241.0
margin_bottom = 1959.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="VBoxContainer" parent="Player"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -405.0
margin_top = -791.0
margin_right = 405.0
margin_bottom = 791.0
custom_constants/separation = 65
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flames" type="TextureButton" parent="Player/Elements" groups=[
"Buttons",
]]
margin_left = 650.0
margin_right = 810.0
margin_bottom = 160.0
size_flags_horizontal = 8
texture_normal = ExtResource( 22 )

[node name="AlbumArt" type="TextureRect" parent="Player/Elements"]
margin_left = 5.0
margin_top = 225.0
margin_right = 805.0
margin_bottom = 1025.0
rect_min_size = Vector2( 0, 492 )
size_flags_horizontal = 4
theme = SubResource( 4 )
texture = ExtResource( 13 )

[node name="NowPlaying" type="Label" parent="Player/Elements"]
margin_top = 1090.0
margin_right = 810.0
margin_bottom = 1146.0
custom_fonts/font = ExtResource( 15 )
text = "Now Playing - Vadium - PAIN!"
align = 1
valign = 1

[node name="Progress" type="VBoxContainer" parent="Player/Elements"]
margin_top = 1211.0
margin_right = 810.0
margin_bottom = 1287.0
size_flags_horizontal = 4
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureProgress" parent="Player/Elements/Progress"]
margin_right = 810.0
margin_bottom = 13.0
texture_under = ExtResource( 21 )
texture_progress = ExtResource( 23 )

[node name="Tween" type="Tween" parent="Player/Elements/Progress/Bar"]

[node name="Time" type="HBoxContainer" parent="Player/Elements/Progress"]
margin_top = 33.0
margin_right = 810.0
margin_bottom = 76.0
custom_constants/separation = 700
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="Player/Elements/Progress/Time"]
margin_right = 52.0
margin_bottom = 43.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.482353, 0.482353, 0.517647, 1 )
text = "1:04"
valign = 1

[node name="End" type="Label" parent="Player/Elements/Progress/Time"]
margin_left = 754.0
margin_right = 810.0
margin_bottom = 43.0
size_flags_horizontal = 8
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.482353, 0.482353, 0.517647, 1 )
text = "3:27"
align = 2
valign = 1

[node name="Buttons" type="HBoxContainer" parent="Player/Elements"]
margin_left = 9.0
margin_top = 1352.0
margin_right = 800.0
margin_bottom = 1582.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 80

[node name="Shuffle" type="TextureButton" parent="Player/Elements/Buttons" groups=[
"Buttons",
]]
margin_top = 84.0
margin_right = 58.0
margin_bottom = 145.0
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 19 )

[node name="Previous" type="TextureButton" parent="Player/Elements/Buttons" groups=[
"Buttons",
]]
margin_left = 138.0
margin_top = 85.0
margin_right = 202.0
margin_bottom = 145.0
size_flags_vertical = 4
texture_normal = ExtResource( 18 )

[node name="PlayPause" type="TextureButton" parent="Player/Elements/Buttons" groups=[
"Buttons",
]]
margin_left = 282.0
margin_right = 512.0
margin_bottom = 230.0
toggle_mode = true
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 24 )

[node name="Next" type="TextureButton" parent="Player/Elements/Buttons" groups=[
"Buttons",
]]
margin_left = 592.0
margin_top = 85.0
margin_right = 656.0
margin_bottom = 145.0
size_flags_vertical = 4
texture_normal = ExtResource( 25 )

[node name="Loop" type="TextureButton" parent="Player/Elements/Buttons" groups=[
"Buttons",
]]
margin_left = 736.0
margin_top = 82.0
margin_right = 791.0
margin_bottom = 148.0
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 26 )

[node name="Music" type="AudioStreamPlayer" parent="Player"]

[node name="Tween" type="Tween" parent="Player"]

[node name="Back" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.0
margin_top = 184.0
margin_right = 182.0
margin_bottom = 464.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeTitle" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="OutputAnimation" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )
anims/FadePoints = SubResource( 7 )

[node name="InputAnimation" type="AnimationPlayer" parent="."]
anims/ShowBack = SubResource( 8 )

[node name="ButtonAnimation" type="Tween" parent="."]
[connection signal="tween_completed" from="Output/Tween" to="." method="_on_Output_Tween_tween_completed"]
[connection signal="pressed" from="Input/Elements/Player" to="." method="_on_Player_pressed"]
[connection signal="focus_entered" from="Input/Elements/NameInput/Name1" to="." method="_on_Name_focus_entered"]
[connection signal="focus_entered" from="Input/Elements/NameInput/Name2" to="." method="_on_Name_focus_entered"]
[connection signal="pressed" from="Input/Elements/Check" to="." method="_on_Check_pressed"]
[connection signal="tween_completed" from="Input/Tween" to="." method="_on_Input_Tween_tween_completed"]
[connection signal="pressed" from="Player/Elements/Flames" to="." method="_on_Flames_pressed"]
[connection signal="pressed" from="Player/Elements/Buttons/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Player/Elements/Buttons/PlayPause" to="." method="_on_PlayPause_pressed"]
[connection signal="pressed" from="Player/Elements/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="finished" from="Player/Music" to="." method="_on_Music_finished"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="ChangeTitle" to="." method="_on_ChangeTitle_timeout"]
[connection signal="animation_finished" from="OutputAnimation" to="." method="_on_OutputAnimation_animation_finished"]
[connection signal="tween_completed" from="ButtonAnimation" to="." method="_on_ButtonAnimation_tween_completed"]
